# furi_encryption

./: .gitmodules
arduino_uno/: platformio.ini
arduino_uno/src/: main.ino
arduino_uno/src/algorithms/: exp_common.h  hight_exp.cpp  lea_exp.cpp  seed_exp.cpp  simeck_exp.cpp  simon_bundle.c  simon_exp.cpp  speck_exp.cpp  tea_bundle.c  tea_exp.cpp  twofish_exp.cpp
arduino_uno/src/include/block-ciphers/include/: types.h
arduino_uno/src/include/libtomcrypt/: CMakeLists.txt  libtomcrypt_VS2008.vcproj  makefile.shared  makefile.unix  sources.cmake
arduino_uno/src/include/libtomcrypt/.ci/: cmake.bat  coverage_more.sh
arduino_uno/src/include/libtomcrypt/.github/ISSUE_TEMPLATE/: 01-bug_report.md
arduino_uno/src/include/libtomcrypt/demos/: CMakeLists.txt  timing.c  tv_gen.c
arduino_uno/src/include/libtomcrypt/doc/: crypt.tex
arduino_uno/src/include/libtomcrypt/src/encauth/chachapoly/: chacha20poly1305_test.c
arduino_uno/src/include/libtomcrypt/src/encauth/ocb/: ocb_init.c
arduino_uno/src/include/libtomcrypt/src/hashes/: sha1.c
arduino_uno/src/include/libtomcrypt/src/hashes/sha2/: sha512.c
arduino_uno/src/include/libtomcrypt/src/headers/: tomcrypt_cipher.h  tomcrypt_private.h
arduino_uno/src/include/libtomcrypt/src/mac/blake2/: blake2bmac_test.c  blake2smac_test.c
arduino_uno/src/include/libtomcrypt/src/mac/f9/: f9_test.c
arduino_uno/src/include/libtomcrypt/src/mac/hmac/: hmac_test.c
arduino_uno/src/include/libtomcrypt/src/mac/omac/: omac_test.c
arduino_uno/src/include/libtomcrypt/src/mac/pmac/: pmac_test.c
arduino_uno/src/include/libtomcrypt/src/misc/: deprecated.c
arduino_uno/src/include/libtomcrypt/src/misc/pkcs5/: pkcs_5_test.c
arduino_uno/src/include/libtomcrypt/src/modes/ctr/: ctr_test.c
arduino_uno/src/include/libtomcrypt/src/modes/f8/: f8_test_mode.c
arduino_uno/src/include/libtomcrypt/src/modes/lrw/: lrw_test.c
arduino_uno/src/include/libtomcrypt/src/modes/xts/: xts_encrypt.c
arduino_uno/src/include/libtomcrypt/src/pk/asn1/oid/: pk_get.c
arduino_uno/src/include/libtomcrypt/src/pk/asn1/x509/: x509_get_pka.c  x509_import_spki.c
arduino_uno/src/include/libtomcrypt/src/stream/chacha/: chacha_test.c
arduino_uno/src/include/libtomcrypt/src/stream/rc4/: rc4_test.c
arduino_uno/src/include/libtomcrypt/src/stream/sosemanuk/: sosemanuk_test.c
arduino_uno/src/include/libtomcrypt/tests/: base16_test.c  bcrypt_test.c  common.c  der_test.c  dsa_test.c  mpi_test.c  no_prng.c  pk_oid_test.c  pkcs_1_emsa_test.c  pkcs_1_pss_test.c  prng_test.c  x25519_test.c
arduino_uno/src/include/libtomcrypt/tests/rsa-pkcs8/: key_pkcs8_pbkdf2_sha3_224_aes256_cbc.der  key_pkcs8_pbkdf2_sha3_256_aes256_cbc.der
pico/: CMakeLists.txt
pico/src/: main.cpp
pico/src/algorithms/: hight_exp.cpp  lea_exp.cpp  rc5_exp.cpp  seed_exp.cpp  simeck_exp.cpp  simon_exp.cpp  speck_exp.cpp  tea_exp.cpp  tinyaes_exp.cpp  twofish_exp.cpp
pico2/: CMakeLists.txt  pico_sdk_import.cmake
pico2/src/: main.cpp
pico2/src/algorithms/: lea_exp.cpp  tea_exp.cpp  twofish_exp.cpp
stm32f103rb_nucleo/: platformio.ini
stm32f103rb_nucleo/src/algorithms/: MAPPING.md  experiments.h  hight_exp.cpp  rc5_exp.cpp  simon_exp.cpp  speck_bundle.c  speck_exp.cpp  tea_exp.cpp  tinyaes_exp.cpp  twofish_bundle.c
stm32f103rb_nucleo/src/include/libtomcrypt/: .gitignore  appveyor.yml  helper.pl  makefile.mingw  makefile.msvc  makefile_include.mk
stm32f103rb_nucleo/src/include/libtomcrypt/.ci/: meta_builds.sh
stm32f103rb_nucleo/src/include/libtomcrypt/.github/workflows/: main.yml
stm32f103rb_nucleo/src/include/libtomcrypt/contrib/: libtomcrypt.cmake
stm32f103rb_nucleo/src/include/libtomcrypt/demos/: der_print_flexi.c  hashsum.c  latex-tables.c
stm32f103rb_nucleo/src/include/libtomcrypt/demos/gcm-file/: gcm_filehandle.c
stm32f103rb_nucleo/src/include/libtomcrypt/doc/: makefile
stm32f103rb_nucleo/src/include/libtomcrypt/notes/: hash_tv.txt  hmac_tv.txt
stm32f103rb_nucleo/src/include/libtomcrypt/src/encauth/ccm/: ccm_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/encauth/eax/: eax_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/encauth/gcm/: gcm_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/encauth/ocb/: ocb_ntz.c  ocb_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/encauth/ocb3/: ocb3_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/headers/: tomcrypt_cfg.h  tomcrypt_custom.h  tomcrypt_misc.h  tomcrypt_pk.h
stm32f103rb_nucleo/src/include/libtomcrypt/src/mac/pelican/: pelican_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/mac/poly1305/: poly1305_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/mac/xcbc/: xcbc_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/math/: ltm_desc.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/misc/crypt/: crypt.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/misc/hkdf/: hkdf_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/modes/f8/: f8_start.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/modes/xts/: xts_decrypt.c  xts_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/pk/dsa/: dsa_import.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/pk/rsa/: rsa_key.c  rsa_verify_hash.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/stream/salsa20/: salsa20_test.c  xsalsa20_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/src/stream/sober128/: sober128_test.c
stm32f103rb_nucleo/src/include/libtomcrypt/tests/: base32_test.c  base64_test.c  cipher_hash_test.c  common.h  deprecated_test.c  dh_test.c  ecc_test.c  ed25519_test.c  file_test.c  misc_test.c  modes_test.c  padding_test.c  pkcs_1_eme_test.c  pkcs_1_oaep_test.c  rsa_test.c  sources.cmake  store_test.c  test.c  tomcrypt_test.h
stm32f103rb_nucleo/src/include/libtomcrypt/tests/rsa-pkcs8/: README.txt  key_pkcs8_pbkdf2_sha3_384_aes256_cbc.der  key_pkcs8_pbkdf2_sha3_512_aes256_cbc.der
